--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      type="image/x-icon"
+      href="./assets/images/favicon.svg"
+      rel="shortcut icon"
+    />
     <title>Memory-Game</title>
   </head>
   <body></body>
