--- a/index.html
+++ b/index.html
@@ -10,6 +10,17 @@
       rel="shortcut icon"
     />
     <title>Memory-Game</title>
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="wrapper">
+      <header class="header container">
+        <div class="header__logo">
+          <img class="logo__img" src="./assets/images/logo.svg" alt="logo" />
+        </div>
+      </header>
+    </div>
+
+    <script src="./js/script.js"></script>
+  </body>
 </html>
