--- a/index.html
+++ b/index.html
@@ -19,6 +19,52 @@
           <img class="logo__img" src="./assets/images/logo.svg" alt="logo" />
         </div>
       </header>
+      <div class="main">
+        <div class="container">
+          <div class="cards">
+            <div class="card">
+              <div class="card__font"></div>
+              <div class="card__back"></div>
+            </div>
+            <div class="card">
+              <div class="card__font"></div>
+              <div class="card__back"></div>
+            </div>
+            <div class="card">
+              <div class="card__font"></div>
+              <div class="card__back"></div>
+            </div>
+            <div class="card">
+              <div class="card__font"></div>
+              <div class="card__back"></div>
+            </div>
+            <div class="card">
+              <div class="card__font"></div>
+              <div class="card__back"></div>
+            </div>
+            <div class="card">
+              <div class="card__font"></div>
+              <div class="card__back"></div>
+            </div>
+            <div class="card">
+              <div class="card__font"></div>
+              <div class="card__back"></div>
+            </div>
+            <div class="card">
+              <div class="card__font"></div>
+              <div class="card__back"></div>
+            </div>
+            <div class="card">
+              <div class="card__font"></div>
+              <div class="card__back"></div>
+            </div>
+            <div class="card">
+              <div class="card__font"></div>
+              <div class="card__back"></div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
 
     <script src="./js/script.js"></script>
