--- a/index.html
+++ b/index.html
@@ -22,10 +22,7 @@
       <div class="main">
         <div class="container">
           <div class="cards">
-            <div class="card">
-              <div class="card__font"></div>
-              <div class="card__back"></div>
-            </div>
+           <img src="./assets/images/cards/bootstrap.png" alt="">
         </div>
       </div>
     </div>
